# music21-mcp-server

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  BRUTAL_REALITY_CHECK_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  COMPLETION_STATUS.md  CONTRIBUTING.md  CRITICAL_FIXES_SUCCESS_REPORT.md  CRITICAL_ISSUES_STATUS.md  DEPLOYMENT_GUIDE.md  DXT_README.md  DXT_SUMMARY.md  Dockerfile  IMPACT_SUMMARY.md  IMSLP_DOWNLOAD_INSTRUCTIONS.txt  INFRASTRUCTURE_IMPROVEMENTS.md  INTERFACES.md  LAUNCH_CHECKLIST.md  LAUNCH_SEQUENCE.md  LICENSE  MANIFEST.in  PERFORMANCE_INVESTIGATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE_5_COMPLETION_SUMMARY.md  PRODUCTION_IMPROVEMENTS.md  PROJECT_SUMMARY.md  PUBLICATION_GUIDE.md  PYPI_PUBLICATION_CHECKLIST.md  PYPI_PUBLICATION_GUIDE.md  PYPI_PUBLISHING.md  PYPI_READY_SUMMARY.md  PYPI_READY_TO_PUBLISH.md  README.md  README_SIMPLIFIED.md  README_UPDATED.md  RELEASE.md  (+50 more)
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: release-request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  test-pypi.yml
backups/: server_old_backup.py
configs/: enterprise.env
docker/: Dockerfile  nginx.conf
docs/: ENTERPRISE_DEPLOYMENT.md  MCP_CATEGORIES.md  MCP_EXAMPLES.md  MCP_INSTALLATION.md  MCP_REGISTRY_SUBMISSION.md  MCP_TOOLS.md  WORKFLOW_TEMPLATES.md  architecture.md  examples.md  getting-started.md  git-workflow.md  simplified-api.md
docs/api/: README.md
docs/guides/: docker_deployment.md  oauth2_authentication.md  production_deployment.md
docs/reports/: CHANGELOG.md  CI_CD_STRATEGIES_SUMMARY.md  CI_SUCCESS.md  CLEANUP_SUMMARY.md  ISSUES_AND_SOLUTIONS.md  NEXT_PHASES_PLAN.md  NEXT_STEPS.md  NUMPY_FIX_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_RESILIENCE_SUMMARY.md  PRODUCTION_STRESS_TEST_GUIDE.md  PRODUCTION_TEST_COMPLETE.md  README.md  STRESS_TEST_FILES.md  TESTING_GUIDE.md  VALIDATION_SUMMARY.md
dxt/: manifest.json  requirements.txt
dxt/scripts/: post_install.py  pre_install.py
examples/: README.md  advanced_features_demo.py  basic_usage.py  basic_working.py  claude_desktop_setup.md  complete_example.py  complete_workflow.py  harmonic_analysis_demo.py  oauth2_client.py  simple_example.py
examples/examples/: README.md  simple_example.py
examples/notebooks/: README.md  quickstart_tutorial.ipynb
helm/music21-mcp/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  redis.yaml  secret.yaml
monitoring/grafana/: music21-mcp-dashboard.json
monitoring/prometheus/: alert_rules.yml
scripts/: README.md  clean_git_history.sh  fix_numpy_env.sh  git_cleanup_commands.sh  prepare_release.py  remove_claude_references.py  setup_production_test.sh  setup_production_test_no_numpy.sh  update_version.py
src/music21_mcp/: __init__.py  async_executor.py  async_optimization.py  cache_warmer.py  health_check.py  health_checks.py  launcher.py  memory_manager.py  memory_pressure_monitor.py  observability.py  parallel_processor.py  performance_cache.py  performance_optimizations.py  rate_limiter.py  resilience.py  resource_manager.py  retry_logic.py  server.py  server_backup.py  server_complex_backup.py  server_enterprise.py  server_minimal.py  server_modular.py  server_remote.py  server_simple.py  services.py
src/music21_mcp/adapters/: __init__.py  (+4 more)
tests/: comprehensive_real_music_test.py  conftest.py  direct_real_music_test.py  manual_test_guide.md  run_reality_tests.py  run_tests.py  test_core_validation.py  test_critical_fixes.py  test_mcp_client.py  test_minimal_functionality.py  test_oauth2.py  test_priority_config.py  test_real_music_accuracy.py  test_real_music_files.py  test_server_pytest.py  test_simplified_comprehensive.py  test_simplified_final.py  test_simplified_server.py  test_tools_comprehensive.py  validate_core_functionality.py  validate_mcp_server.py
tests/adapters/: __init__.py  test_mcp_adapter_minimal.py
tests/chaos/: chaos_discovery_tests.py  file_system_chaos_tests.py
tests/core/: __init__.py  test_music_analysis_service.py
tests/health/: test_health_check.py
tests/integration/: music_professor_test_suite.py  test_claude_desktop_integration.py  test_counterpoint_endpoints.py  test_fastmcp_integration.py  test_fastmcp_integration_summary.md  test_fastmcp_server.py  test_fastmcp_server_summary.md  test_harmonic_endpoints.py  test_mcp_endpoints.py  test_mcp_tools_integration.py  test_melodic_endpoints.py  test_production_failures.py  test_server_integration.py
tests/performance/: PERFORMANCE_TESTING_GUIDE.md  example_performance_test.py  memory_torture_tests.py  production_readiness_suite.py  production_stress_test.py  real_world_validation.py  run_performance_tests.py  run_production_test.py  run_production_test_lite.py  simple_stress_test.py  stress_test_monitor.py  test_basic_server.py  test_performance.py
tests/security/: access_control_tests.py  emergency_auth_tests.py  session_security_tests.py
tests/test_data/: imslp_test_corpus.py
tests/unit/: run_critical_tool_tests.sh  test_adapter_coverage_boost.py  test_advanced_theory.py  test_chord_analysis_tool.py  test_counterpoint_tool.py  test_coverage_boost.py  test_coverage_boost_simple.py  test_coverage_boosters.py  test_coverage_critical.py  test_delete_tool.py  test_export_tool.py  test_harmonic_analyzer.py  test_harmonization_tool.py  test_harmony_analysis_tool.py  test_health_checks.py  test_import_tool.py  test_key_analysis_tool.py  test_list_tool.py  test_melodic_analyzer.py  test_pattern_recognition_tool.py  test_performance_optimizations.py  test_rate_limiter.py  test_retry_logic.py  test_rhythm_analyzer.py  test_score_info_tool.py  test_score_parser.py  test_style_imitation_tool.py  test_theory_analyzer.py  test_tools_coverage_summary.py  test_tools_unit.py  test_voice_leading_tool.py
tests/validation/: README.md  __init__.py  musical_accuracy_config.py  run_musical_accuracy_tests.py  run_validation_tests.py  test_config.py  test_corpus_accuracy.py  test_known_compositions.py  test_musical_accuracy.py
(+49 files in other folders)
