[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "music21-mcp-server"
version = "1.0.0"
description = "Professional multi-interface music analysis server built on music21, providing MCP Server, HTTP API, CLI tools, and Python library interfaces for comprehensive music analysis and composition."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bright Liu", email = "brightliu@college.harvard.edu"}
]
keywords = ["music", "analysis", "mcp", "music21", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "music21>=9.1.0",
    "midiutil>=1.2.1",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "pydantic>=2.11.0",
    "aiofiles>=23.0.0",
    "httpx>=0.28.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "mcp>=1.11.0",
    "fastmcp==2.9.0",
    "bleach>=6.1.0",
    "pathvalidate>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
]

[tool.poetry]
name = "music21-mcp-server"
version = "1.0.0"
description = "Enterprise-grade Model Context Protocol server for music analysis and composition"
authors = ["Bright Liu <brightliu@college.harvard.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brightlikethelight/music21-mcp-server"
repository = "https://github.com/brightlikethelight/music21-mcp-server"
documentation = "https://github.com/brightlikethelight/music21-mcp-server/blob/main/README.md"
keywords = ["music", "analysis", "mcp", "music21", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "music21_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
music21 = "^9.1.0"
midiutil = "^1.2.1"
numpy = "^1.24.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
pillow = "^10.0.0"
pydantic = "^2.11.0"
aiofiles = "^23.0.0"
httpx = "^0.28.0"
cachetools = "^5.3.0"
python-dotenv = "^1.0.0"
# MCP uses stdio transport, no HTTP server needed
psutil = "^5.9.0"
mcp = "^1.11.0"
fastmcp = "==2.9.0"  # Pinned version for stability - MCP breaks frequently
# Basic security and web dependencies  
bleach = "^6.1.0"
pathvalidate = "^3.2.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-benchmark = "^4.0.0"
pytest-timeout = "^2.2.0"
memory-profiler = "^0.61.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
types-redis = "^4.6.0"
types-psutil = "^5.9.0"
pre-commit = "^3.6.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.audio]
optional = true

[tool.poetry.group.audio.dependencies]
pydub = "^0.25.0"
simpleaudio = "^1.0.4"
soundfile = "^0.12.0"

[tool.poetry.group.visualization]
optional = true

[tool.poetry.group.visualization.dependencies]
plotly = "^5.17.0"
seaborn = "^0.12.0"

# No enterprise extras - keeping it simple until MCP ecosystem stabilizes

[tool.poetry.scripts]
# Unified launcher for all interfaces
music21-analysis = "music21_mcp.launcher:main"

# Individual interface entry points
music21-mcp = "music21_mcp.server_minimal:main"
music21-http = "music21_mcp.adapters.http_adapter:main"
music21-cli = "music21_mcp.adapters.cli_adapter:main"

[project.urls]
"Homepage" = "https://github.com/brightlikethelight/music21-mcp-server"
"Repository" = "https://github.com/brightlikethelight/music21-mcp-server"
"Documentation" = "https://github.com/brightlikethelight/music21-mcp-server/blob/main/README.md"
"Bug Tracker" = "https://github.com/brightlikethelight/music21-mcp-server/issues"
"Changelog" = "https://github.com/brightlikethelight/music21-mcp-server/blob/main/CHANGELOG.md"
"Discussions" = "https://github.com/brightlikethelight/music21-mcp-server/discussions"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brightlikethelight/music21-mcp-server/issues"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]
exclude = ["debug_test.py", "examples/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # function is too complex
    "W191",   # indentation contains tabs
    "S101",   # use of assert (pytest uses asserts)
    "S608",   # possible SQL injection (false positives)
    "S311",   # pseudo-random generators are OK for music generation
    "B007",   # unused loop control variable (sometimes needed for clarity)
    "UP038",  # isinstance with union (backwards compatibility)
    "E722",   # bare except (used intentionally in error recovery)
    "S110",   # try-except-pass (acceptable for optional operations)
    "S112",   # try-except-continue (acceptable in loops)
    "F541",   # f-string without placeholders (sometimes clearer)
    "SIM102", # nested if statements (sometimes clearer)
    "C401",   # unnecessary generator (performance not critical)
    "RET504", # unnecessary assignment before return (clarity)
    "F841",   # unused variable (sometimes for documentation)
    "PLR",    # too many arguments/branches/statements (complexity needed)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "S101", "S106", "S311", "E402", "F401", "F821", "S602", "S603", "S108", "S103", "W293"]
"src/music21_mcp/tools/*" = ["T20"]  # Allow print in tools
"src/music21_mcp/adapters/cli_adapter.py" = ["T201"]  # CLI needs print statements
"src/music21_mcp/launcher.py" = ["T201"]  # Launcher needs print statements
"src/music21_mcp/adapters/http_adapter.py" = ["T201"]  # HTTP startup messages

[tool.ruff.lint.isort]
known-first-party = ["music21_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "music21_mcp.tools.*",
    "music21_mcp.adapters.*",
    "music21_mcp.server_minimal",
    "music21_mcp.launcher",
]
disallow_untyped_defs = false
warn_return_any = false
warn_unreachable = true
strict_equality = true

[tool.isort]
profile = "black"
line_length = 88

[[tool.mypy.overrides]]
module = "music21.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/music21_mcp",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",  # Professional standard coverage requirement
    "--timeout=60",  # Prevent infinite loops from hanging tests
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "stress: marks tests as stress tests",
    "security: marks tests as security tests",
    "chaos: marks tests as chaos engineering tests",
    "health: marks tests as health check tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/music21_mcp"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]